--- a/about.html
+++ b/about.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - PixelVault Gaming Store</title>
+    <title>About Us - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Learn about PixelVault's mission to bring the best gaming experiences to players worldwide."
+      content="Learn about BeyondProgressivePlay.com's mission to bring the best gaming experiences to players worldwide."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/about-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
