--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Catalog - PixelVault Gaming Store</title>
+    <title>Game Catalog - BeyondProgressivePlay.com</title>
     <meta
       name="description"
       content="Browse our complete collection of PC and Xbox games. Filter by genre, platform, price, and more."
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/catalog-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
