--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us - PixelVault Gaming Store</title>
+    <title>Contact Us - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Get in touch with our support team. We're here to help with any questions about our games or services."
+      content="Get in touch with BeyondProgressivePlay.com. We're here to help with your gaming needs and provide excellent customer support."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/contact-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -123,7 +124,7 @@
                   <div class="method-icon">📧</div>
                   <div class="method-content">
                     <h3>Email Support</h3>
-                    <p>support@pixelvault.com</p>
+                    <p>support@BeyondProgressivePlay.com</p>
                     <span class="response-time">Response within 2 hours</span>
                   </div>
                 </div>
@@ -132,8 +133,8 @@
                   <div class="method-icon">📞</div>
                   <div class="method-content">
                     <h3>Phone Support</h3>
-                    <p>+1 (555) 123-4567</p>
-                    <span class="response-time">Mon-Fri 9AM-6PM EST</span>
+                    <p>+61 2 9932 6051</p>
+                    <span class="response-time">Mon-Fri 9AM-6PM AEST</span>
                   </div>
                 </div>
 
@@ -142,8 +143,7 @@
                   <div class="method-content">
                     <h3>Office Address</h3>
                     <p>
-                      123 Gaming Street<br />Tech City, TC 12345<br />United
-                      States
+                      9 Vasey Crescent<br />Campbell ACT 2612<br />Australia
                     </p>
                   </div>
                 </div>
@@ -155,11 +155,11 @@
               <div class="hours-list">
                 <div class="hours-item">
                   <span class="day">Monday - Friday</span>
-                  <span class="time">9:00 AM - 6:00 PM EST</span>
+                  <span class="time">9:00 AM - 6:00 PM AEST</span>
                 </div>
                 <div class="hours-item">
                   <span class="day">Saturday</span>
-                  <span class="time">10:00 AM - 4:00 PM EST</span>
+                  <span class="time">10:00 AM - 4:00 PM AEST</span>
                 </div>
                 <div class="hours-item">
                   <span class="day">Sunday</span>
@@ -168,7 +168,10 @@
               </div>
               <div class="timezone-note">
                 <span class="timezone-icon">🌍</span>
-                <span>All times are in Eastern Standard Time (EST)</span>
+                <span
+                  >All times are in Australian Eastern Standard Time
+                  (AEST)</span
+                >
               </div>
             </div>
           </div>
@@ -178,14 +181,14 @@
           <h2>Find Our Office</h2>
           <div class="map-container">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.2219901290355!2d-74.00369368400567!3d40.71312937933185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a23e28c1191%3A0x49f75d3281df052a!2s150%20Park%20Row%2C%20New%20York%2C%20NY%2010007%2C%20USA!5e0!3m2!1sen!2s!4v1640995200000!5m2!1sen!2s"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.622980742587!2d149.1491730753626!3d-35.29494913160431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b16540aa7569cfd%3A0x4470086b3f597c4f!2s9%20Vasey%20Cres%2C%20Campbell%20ACT%202612%2C%20Australia!5e0!3m2!1sen!2sau!4v1718388520123!5m2!1sen!2sau"
               width="100%"
               height="400"
               style="border: 0; border-radius: 20px"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
-              title="PixelVault Gaming Office Location"
+              title="BeyondProgressivePlay.com Office Location"
             ></iframe>
           </div>
         </div>
