--- a/game-detail.html
+++ b/game-detail.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Title - PixelVault Gaming Store</title>
+    <title>Game Details - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Discover detailed information about this amazing game. View system requirements and purchase options."
+      content="Explore game details, reviews, and purchase options at BeyondProgressivePlay.com. Get the best gaming experience."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/cart-styles.css" />
     <link rel="stylesheet" href="assets/styles/game-detail.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -21,7 +22,7 @@
       <div class="game-detail-container">
         <div class="game-detail-header">
           <nav class="breadcrumb-nav">
-            <a href="index.html">Home</a>
+            <a href="./">Home</a>
             <span class="breadcrumb-separator">/</span>
             <a href="catalog.html" class="category-link">Games</a>
             <span class="breadcrumb-separator">/</span>
