--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PixelVault - Premium Gaming Store</title>
+    <title>BeyondProgressivePlay.com - Premium Gaming Store</title>
     <meta
       name="description"
-      content="Discover the latest PC and Xbox games at PixelVault. Premium gaming experience with exclusive titles and competitive prices."
+      content="Discover the latest PC and Xbox games at BeyondProgressivePlay.com. Premium gaming experience with exclusive titles and competitive prices."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
