--- a/privacy.html
+++ b/privacy.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - PixelVault Gaming Store</title>
+    <title>Privacy Policy - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Learn how PixelVault collects, uses, and protects your personal information."
+      content="Learn how BeyondProgressivePlay.com collects, uses, and protects your personal information."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/legal-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -27,8 +28,8 @@
           <section class="legal-section">
             <h2>1. Information We Collect</h2>
             <p>
-              At PixelVault, we collect information to provide better services
-              to our customers and improve our gaming platform.
+              At BeyondProgressivePlay.com, we collect information to provide
+              better services to our customers and improve our gaming platform.
             </p>
 
             <h3>1.1 Personal Information</h3>
@@ -222,12 +223,12 @@
               practices, please contact us:
             </p>
             <div class="contact-info">
-              <p><strong>Email:</strong> privacy@pixelvault.com</p>
+              <p><strong>Email:</strong> privacy@BeyondProgressivePlay.com</p>
               <p>
-                <strong>Address:</strong> 123 Gaming Street, Tech City, TC
-                12345, United States
+                <strong>Address:</strong> 9 Vasey Crescent, Campbell ACT 2612,
+                Australia
               </p>
-              <p><strong>Phone:</strong> +1 (555) 123-4567</p>
+              <p><strong>Phone:</strong> +61 2 9932 6051</p>
             </div>
           </section>
         </div>
