--- a/refund.html
+++ b/refund.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Return & Refund Policy - PixelVault Gaming Store</title>
+    <title>Return & Refund Policy - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Learn about PixelVault's return and refund policy for digital games."
+      content="Learn about BeyondProgressivePlay.com's return and refund policy for digital games."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/legal-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -86,7 +87,7 @@
             <h3>4.1 Online Refund Request</h3>
             <p>To request a refund online:</p>
             <ol>
-              <li>Log into your PixelVault account</li>
+              <li>Log into your BeyondProgressivePlay.com account</li>
               <li>Go to "Order History" in your account dashboard</li>
               <li>Find the order you want to refund</li>
               <li>Click "Request Refund"</li>
@@ -98,10 +99,10 @@
             <h3>4.2 Contact Support</h3>
             <p>You can also request a refund by contacting our support team:</p>
             <ul>
-              <li><strong>Email:</strong> refunds@pixelvault.com</li>
+              <li><strong>Email:</strong> refunds@BeyondProgressivePlay.com</li>
               <li><strong>Live Chat:</strong> Available 24/7 on our website</li>
               <li>
-                <strong>Phone:</strong> +1 (555) 123-4567 (Mon-Fri 9AM-6PM EST)
+                <strong>Phone:</strong> +61 2 9932 6051 (Mon-Fri 9AM-6PM AEST)
               </li>
             </ul>
 
@@ -248,14 +249,14 @@
             <h2>11. Contact Information</h2>
             <p>For questions about our refund policy or to request a refund:</p>
             <div class="contact-info">
-              <p><strong>Email:</strong> refunds@pixelvault.com</p>
+              <p><strong>Email:</strong> refunds@BeyondProgressivePlay.com</p>
               <p><strong>Live Chat:</strong> Available 24/7 on our website</p>
               <p>
-                <strong>Phone:</strong> +1 (555) 123-4567 (Mon-Fri 9AM-6PM EST)
+                <strong>Phone:</strong> +61 2 9932 6051 (Mon-Fri 9AM-6PM AEST)
               </p>
               <p>
-                <strong>Address:</strong> 123 Gaming Street, Tech City, TC
-                12345, United States
+                <strong>Address:</strong> 9 Vasey Crescent, Campbell ACT 2612,
+                Australia
               </p>
             </div>
           </section>
