--- a/shipping.html
+++ b/shipping.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shipping & Delivery - PixelVault Gaming Store</title>
+    <title>Shipping & Delivery - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Learn about PixelVault's digital delivery and download processes."
+      content="Learn about BeyondProgressivePlay.com's digital delivery and download processes."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/legal-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -212,7 +213,8 @@
 
             <h3>7.1 Game Library</h3>
             <p>
-              All purchased games are stored in your PixelVault account library:
+              All purchased games are stored in your BeyondProgressivePlay.com
+              account library:
             </p>
             <ul>
               <li>Permanent access to all purchased games</li>
@@ -268,7 +270,9 @@
             <h3>9.2 Gift Redemption</h3>
             <p>Gift recipients can:</p>
             <ul>
-              <li>Create a PixelVault account to claim the gift</li>
+              <li>
+                Create a BeyondProgressivePlay.com account to claim the gift
+              </li>
               <li>Download the game immediately upon redemption</li>
               <li>Access the game through their library</li>
               <li>Receive support for installation and activation</li>
@@ -301,14 +305,14 @@
             <h2>11. Contact Information</h2>
             <p>For questions about digital delivery or download issues:</p>
             <div class="contact-info">
-              <p><strong>Email:</strong> delivery@pixelvault.com</p>
+              <p><strong>Email:</strong> delivery@BeyondProgressivePlay.com</p>
               <p><strong>Live Chat:</strong> Available 24/7 on our website</p>
               <p>
-                <strong>Phone:</strong> +1 (555) 123-4567 (Mon-Fri 9AM-6PM EST)
+                <strong>Phone:</strong> +61 2 9932 6051 (Mon-Fri 9AM-6PM AEST)
               </p>
               <p>
-                <strong>Address:</strong> 123 Gaming Street, Tech City, TC
-                12345, United States
+                <strong>Address:</strong> 9 Vasey Crescent, Campbell ACT 2612,
+                Australia
               </p>
             </div>
           </section>
