--- a/terms.html
+++ b/terms.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terms of Service - PixelVault Gaming Store</title>
+    <title>Terms of Service - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Terms and conditions for using PixelVault gaming store services."
+      content="Terms and conditions for using BeyondProgressivePlay.com gaming store services."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
     <link rel="stylesheet" href="assets/styles/footer-styles.css" />
     <link rel="stylesheet" href="assets/styles/legal-page.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -158,9 +159,9 @@
 
             <h3>7.1 Our Rights</h3>
             <p>
-              PixelVault and its content, including but not limited to text,
-              graphics, logos, and software, are protected by copyright and
-              other intellectual property laws.
+              BeyondProgressivePlay.com and its content, including but not
+              limited to text, graphics, logos, and software, are protected by
+              copyright and other intellectual property laws.
             </p>
 
             <h3>7.2 Third-Party Rights</h3>
@@ -206,9 +207,9 @@
 
             <h3>9.3 Limitation of Liability</h3>
             <p>
-              To the maximum extent permitted by law, PixelVault shall not be
-              liable for any indirect, incidental, special, or consequential
-              damages.
+              To the maximum extent permitted by law, BeyondProgressivePlay.com
+              shall not be liable for any indirect, incidental, special, or
+              consequential damages.
             </p>
           </section>
 
@@ -261,12 +262,12 @@
               us:
             </p>
             <div class="contact-info">
-              <p><strong>Email:</strong> legal@pixelvault.com</p>
+              <p><strong>Email:</strong> legal@BeyondProgressivePlay.com</p>
               <p>
-                <strong>Address:</strong> 123 Gaming Street, Tech City, TC
-                12345, United States
+                <strong>Address:</strong> 9 Vasey Crescent, Campbell ACT 2612,
+                Australia
               </p>
-              <p><strong>Phone:</strong> +1 (555) 123-4567</p>
+              <p><strong>Phone:</strong> +61 2 9932 6051</p>
             </div>
           </section>
         </div>
