--- a/cart.html
+++ b/cart.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopping Cart - PixelVault Gaming Store</title>
+    <title>Shopping Cart - BeyondProgressivePlay.com</title>
     <meta
       name="description"
-      content="Review your cart items and proceed to checkout. Secure payment and instant digital delivery."
+      content="Review your shopping cart at BeyondProgressivePlay.com. Secure checkout and instant game delivery."
     />
     <link rel="stylesheet" href="assets/styles/core-styles.css" />
     <link rel="stylesheet" href="assets/styles/header-styles.css" />
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/styles/cart-styles.css" />
     <link rel="stylesheet" href="assets/styles/cart-page.css" />
     <link rel="stylesheet" href="assets/styles/cart-responsive.css" />
+    <link rel="icon" href="assets/public/logo-icon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="header-container"></div>
@@ -23,7 +24,7 @@
         <div class="cart-page-header">
           <h1 class="cart-page-title">Shopping Cart</h1>
           <nav class="cart-breadcrumb">
-            <a href="index.html">Home</a>
+            <a href="./">Home</a>
             <span class="breadcrumb-separator">/</span>
             <span class="current-page">Cart</span>
           </nav>
@@ -51,14 +52,14 @@
                 <div class="empty-cart-icon">🛒</div>
                 <h3>Your cart is empty</h3>
                 <p>Looks like you haven't added any games to your cart yet.</p>
-                <a href="index.html" class="browse-games-btn primary-btn">
+                <a href="./" class="browse-games-btn primary-btn">
                   Browse Games
                 </a>
               </div>
             </div>
 
             <div class="cart-actions">
-              <a href="index.html" class="continue-shopping-btn secondary-btn">
+              <a href="./" class="continue-shopping-btn secondary-btn">
                 <span class="arrow-icon">←</span>
                 Continue Shopping
               </a>
